[package]
name = "xdebug"
version = "0.1.2"
authors = ["Yakup Arslan"]
edition = "2021"
description = "PHP xdebug client library"
license = "MIT"
repository = "https://github.com/yakupars/xdebug.git"
homepage = "https://github.com/yakupars/xdebug.git"
keywords = ["PHP", "xdebug"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
