[package]
name = "xdebug"
version = "0.2.1"
authors = ["Yakup Arslan"]
edition = "2021"
description = "PHP xdebug client library"
license = "MIT"
repository = "https://github.com/yakupars/xdebug.git"
homepage = "https://github.com/yakupars/xdebug.git"
keywords = ["PHP", "xdebug"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }